--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body style="overflow:hidden">
+
+    <script src="js/lib/ammo.wasm.js"></script>
+
     <!-- Import maps polyfill -->
     <!-- Remove this when import maps will be widely supported -->
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
