--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Helix</title>
     <meta name="description" content="boop">
 
-    <link  type="text/css" rel="stylesheet" href="/css/main.css">
+    <link  type="text/css" rel="stylesheet" href="css/main.css">
     <!-- <link rel="shortcut icon" type="image/png" href="{{ '/images/favicon-16x16.png' }}" > -->
   </head>
 
@@ -31,5 +31,10 @@
 
     <script type="module" src="js/main.js"></script>
 
+    <div class="uiBase">HIHIHIH</div>
+    <div class="uiGameOver">
+      <span class="gameOverHeader">GAME OVER</span>
+      <img style="color:black" src="static/retry-icon.png"/>
+    </div>
   </body>
 </html>
