Worked on color blocks concept (WIP)

--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@
 
     <script type="module" src="js/main.js"></script>
 
-    <div class="uiBase">HIHIHIH</div>
+    <div id="uiComboScore">0</div>
+    <div class="uiBase">
+    </div>
     <div class="uiGameOver">
       <span class="gameOverHeader">GAME OVER</span>
-      <img style="color:black" src="static/retry-icon.png"/>
+      <a href="/"  class="restartButton">
+        <img style="color:black" src="static/retry-icon.png"/>
+      </a>
     </div>
   </body>
 </html>
