--- a/index.html
+++ b/index.html
@@ -32,10 +32,18 @@
     <script type="module" src="js/main.js"></script>
 
     <div id="uiComboScore">0</div>
+    <div id="uiTotalScore">0</div>
+    <div id="uiScoreModifier">x1</div>
     <div class="uiBase">
     </div>
-    <div class="uiGameOver">
+    <div id="uiGameOver">
       <span class="gameOverHeader">GAME OVER</span>
+      <a href="/"  class="restartButton">
+        <img style="color:black" src="static/retry-icon.png"/>
+      </a>
+    </div>
+    <div id="uiGameSuccess">
+      <span class="gameOverHeader">YOU WIN</span>
       <a href="/"  class="restartButton">
         <img style="color:black" src="static/retry-icon.png"/>
       </a>
