--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body style="overflow:hidden">
 
     <script src="js/lib/ammo.wasm.js"></script>
-    <script type="module" src="js/lib/three.module.js"></script>
+    <script type="module" src="js/lib/three.min.js"></script>
 
     <script type="module" src="js/main.js"></script>
 
