--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
 
     <script src="js/lib/ammo.wasm.js"></script>
     <script src="js/lib/howler.min.js"></script>
-    <script type="module" src="js/lib/three.min.js"></script>
+    <script src="js/lib/three.min.js"></script>
 
-    <script type="module" src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
     <div id="uiScoreContainer">
-      <div class="uiScore" style="display:none">
-        <span class="uiScoreHeading">TOTAL</span>
+      <div class="uiScore">
+        <!-- <span class="uiScoreHeading">TOTAL</span> -->
         <span id="uiTotalScore">0</span>
+        <span id="uiScoreUpdate">+24</span>
       </div>
       <div class="uiScore">
         <!-- <span class="uiScoreHeading">COMBO</span> -->
@@ -34,18 +35,23 @@
         <span id="uiScoreModifier">x1</span>
       </div>
     </div>
+
     <div id="uiLevelContainer" class="uiMessageContainer">
       <span id="uiLevel" class="message">LEVEL 1</span>
+      <a href="#" onclick="startGame(event)" class="button">START</a>
     </div>
+
     <div id="uiGameOver" class="uiMessageContainer">
       <span class="message">GAME OVER</span>
       <span id="uiLoseScore" class="message">SCORE 0</span>
       <a href="/" class="button">TRY AGAIN</a>
     </div>
+
     <div id="uiGameSuccess" class="uiMessageContainer">
       <span class="message">YOU WON!</span>
       <span id="uiWinScore" class="message">SCORE 0</span>
       <a id="nextLevelButton" href="/" class="button">NEXT LEVEL</a>
     </div>
+
   </body>
 </html>
