--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
     <div id="uiLevelContainer" class="uiMessageContainer">
       <span id="uiLevel" class="message">LEVEL 1</span>
-      <a href="#" onclick="startGame(event)" class="button">START</a>
+      <span id="uiLoading" class="message">LOADING</span>
+      <a id="startButton" href="#" onclick="startGame(event)" class="button">START</a>
     </div>
 
     <div id="uiGameOver" class="uiMessageContainer">
